# linicrypt

./: .gitignore  README.md  pyproject.toml
src/linicrypt_solver/: __init__.py  algebraic_representation.py  cli.py  field.py  ideal_cipher.py  merkle_damgard.py  random_oracle.py  solvable.py  utils.py
src/linicrypt_solver/sympy/: __init__.py
