[project]
name = "linicrypt_solver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Frederik Semmel", email = "frederiksemmel@gmail.com" }
]
dependencies = [
    "sympy==1.10",
    "galois>=0.4.1",
    "more-itertools>=10.4.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/linicrypt_solver"]
